copy and spacing fixes

--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ a {
 }
 
 .footnotes {
-	margin-top: 15px;
-	margin-bottom: 15px;
+	margin-top: 22px;
+	margin-bottom: 22px;
 	max-width: 380px;
 }
 
@@ -156,8 +156,8 @@ a {
 	}
 
 	.footnotes {
-		margin-top: 10px;
-		margin-bottom: 8px;
+		margin-top: 18px;
+		margin-bottom: 24px;
 	}
 
 	.small-text {
